--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "build": "bun bun.config.js",
     "build:css:compile": "sass ./app/assets/stylesheets/application.bootstrap.scss:./app/assets/builds/application.css --no-source-map --load-path=node_modules",
     "build:css:prefix": "postcss ./app/assets/builds/application.css --use=autoprefixer --output=./app/assets/builds/application.css",
-    "build:css": "bun run build:css:compile && bun run build:css:prefix",
+    "build:css": "bun run build:css:compile",
     "watch:css": "nodemon --watch ./app/assets/stylesheets/ --ext scss --exec \"bun run build:css\""
   },
   "dependencies": {
